author methods updated
